crates/vybe_parser_generic/grammars/python.grammar
# Python Grammar Definition
# ─────────────────────────

[language]
name = "python"
case_sensitive = true
statement_terminator = "newline"
indentation_based = true         # INDENT/DEDENT tokens from whitespace

[lexer]
comment_line = "#"

string_delimiters = ["'", "\""]
triple_string = ["'''", "\"\"\""]
string_prefix = ["f", "r", "b", "fr", "rb"]   # f-strings, raw, bytes
interpolation = ["{", "}"]     # inside f-strings only

keywords = [
  "def", "class", "if", "elif", "else", "for", "while",
  "break", "continue", "return", "pass", "yield",
  "try", "except", "finally", "raise", "with", "as",
  "import", "from",
  "and", "or", "not", "in", "is",
  "lambda", "global", "nonlocal", "assert", "del",
  "True", "False", "None",
  "async", "await", "match", "case",
]

operators = [
  "**=", "//=", ">>=", "<<=",
  "**", "//", ">>", "<<",
  "+=", "-=", "*=", "/=", "%=", "&=", "|=", "^=", "@=",
  "==", "!=", "<=", ">=",
  "->", ":=",
  "+", "-", "*", "/", "%",
  "&", "|", "^", "~",
  "<", ">", "=",
  "(", ")", "{", "}", "[", "]",
  ".", ",", ";", ":", "@",
]

[operators]

[[operators.prefix]]
ops = ["not", "-", "+", "~", "await"]

[[operators.infix]]
precedence = 1
ops = ["or"]
assoc = "left"

[[operators.infix]]
precedence = 2
ops = ["and"]
assoc = "left"

[[operators.infix]]
precedence = 3
ops = ["in", "not in", "is", "is not", "==", "!=", "<", ">", "<=", ">="]
assoc = "left"
# Python allows chained comparisons: a < b < c

[[operators.infix]]
precedence = 4
ops = ["|"]
assoc = "left"

[[operators.infix]]
precedence = 5
ops = ["^"]
assoc = "left"

[[operators.infix]]
precedence = 6
ops = ["&"]
assoc = "left"

[[operators.infix]]
precedence = 7
ops = ["<<", ">>"]
assoc = "left"

[[operators.infix]]
precedence = 8
ops = ["+", "-"]
assoc = "left"

[[operators.infix]]
precedence = 9
ops = ["*", "/", "//", "%", "@"]
assoc = "left"

[[operators.infix]]
precedence = 10
ops = ["**"]
assoc = "right"

[blocks]
# Python uses indentation. The engine emits INDENT/DEDENT tokens.
# A "block" is: ":" NEWLINE INDENT stmt_list DEDENT
compound = { open = "INDENT", close = "DEDENT", prefix = ":" }

[types]
position = "after"      # optional type hints: x: int
separator = ":"
# Return type annotation: -> Type
return_separator = "->"

[statements]

[statements.if]
pattern = '"if" EXPR ":" BLOCK ("elif" EXPR ":" BLOCK)* ("else" ":" BLOCK)?'
maps_to = "If"

[statements.while]
pattern = '"while" EXPR ":" BLOCK ("else" ":" BLOCK)?'
maps_to = "While"

[statements.for]
pattern = '"for" IDENT "in" EXPR ":" BLOCK ("else" ":" BLOCK)?'
maps_to = "ForIn"

[statements.try]
pattern = '"try" ":" BLOCK ("except" (IDENT ("as" IDENT)?)? ":" BLOCK)* ("else" ":" BLOCK)? ("finally" ":" BLOCK)?'
maps_to = "Try"

[statements.with]
pattern = '"with" EXPR ("as" IDENT)? ":" BLOCK'
maps_to = "With"

[statements.return]
pattern = '"return" EXPR?'
maps_to = "Return"

[statements.raise]
pattern = '"raise" EXPR? ("from" EXPR)?'
maps_to = "Throw"

[statements.break]
pattern = '"break"'
maps_to = "Break"

[statements.continue]
pattern = '"continue"'
maps_to = "Continue"

[statements.pass]
pattern = '"pass"'
maps_to = "Empty"

[statements.assert]
pattern = '"assert" EXPR ("," EXPR)?'
maps_to = "Extra"
extra = { kind = "assert" }

[statements.del]
pattern = '"del" EXPR'
maps_to = "Extra"
extra = { kind = "del" }

[statements.global]
pattern = '"global" IDENT_LIST'
maps_to = "Extra"
extra = { kind = "global" }

[statements.nonlocal]
pattern = '"nonlocal" IDENT_LIST'
maps_to = "Extra"
extra = { kind = "nonlocal" }

[declarations]

[declarations.function]
pattern = '("@" EXPR NEWLINE)* ("async")? "def" IDENT "(" PARAMS ")" ("->" TYPE)? ":" BLOCK'
maps_to = "FunctionDecl"

[declarations.class]
pattern = '("@" EXPR NEWLINE)* "class" IDENT ("(" EXPR_LIST ")")? ":" BLOCK'
maps_to = "ClassDecl"

[declarations.import]
pattern = '"import" IDENT_LIST'
maps_to = "Import"

[declarations.from_import]
pattern = '"from" IDENT "import" IDENT_LIST'
maps_to = "Import"

[expressions]
member_access = "."
index_access = ["[", "]"]
call = ["(", ")"]

[expressions.primary]
list_literal = ["[", "]"]
dict_literal = ["{", "}"]
tuple_literal = ["(", ")"]      # or just paren grouping — context-dependent
lambda = '"lambda" PARAMS ":" EXPR'

# Python allows: x if cond else y (ternary)
[expressions.ternary]
pattern = 'EXPR "if" EXPR "else" EXPR'

[params]
open = "("
close = ")"
separator = ","
name_type_separator = ":"
type_position = "after"
default_value = "="
rest_prefix = "*"
kwargs_prefix = "**"

[assignment]
operator = "="
compound_operators = {
  "+=" = "Add", "-=" = "Sub", "*=" = "Mul", "/=" = "Div",
  "//=" = "IDiv", "%=" = "Mod", "**=" = "Pow",
  "&=" = "BitAnd", "|=" = "BitOr", "^=" = "BitXor",
  "<<=" = "Shl", ">>=" = "Shr",
}
walrus = ":="   # assignment expression
